Modified the HTML and CSS files

--- a/src/index.html
+++ b/src/index.html
@@ -12,33 +12,16 @@
 </head>
 
 <body>
-    <div id="navbar">
-        <img alt="Jovian_logo" id="logo" src="https://i.imgur.com/m1wXjqw.png" height="30px">
-    </div>
-    <img id="banner" src="banner.jpg" alt="Banner" Height="240">
-    <h1>About Jovian</h1>
+    <img id="modern" src="modern.jpg" alt="modern" Height="240">
+    <h1>About Degi</h1>
 
     <div id="about">
         <div id="description">
-            <p style="margin-top: 0">At, Jovian, we' re on a mission to build the world's most highly reputed technical
-                institution, and we're building it completely online.We offer a number of beginner friendly courses with
-                over 100,000+ registerd users.</p>
-            <p>We also offer 2 industry-focused bootcamps:
-            <ol>
-                <li>
-                    <a href="https://www.jovian.com/full-stack-developer-bootcamp">
-                        Jovian Full Stack Developer Bootcamp</a>
-                </li>
-                <li>
-                    <a href="https://www.jovian.com/data-science-bootcamp">
-                        Jovian Data Science Bootcamp</a>
-                </li>
-            </ol>
-            </p>
+            <p style="margin-top: 0">Degi Institute is a leading technical institution dedicated to providing comprehensive and accessible beginner-level technical courses. Nestled in a vibrant learning environment, Degi Institute caters to individuals seeking to kickstart their journey in the ever-evolving field of technology.</p>
         </div>
 
-        <div id="team">
-            <img id="team-image" src="team.jpg" alt="team">
+        <div id="black">
+            <img id="black-image" src="black.jpg" alt="black">
         </div>
     </div>
 
@@ -58,36 +41,36 @@
             </tr>
             <tr class="jobs-data-row">
                 <td>Frontend Developer</td>
-                <td>Bengaluru</td>
-                <td>India</td>
-                <td>₹12,00,000</td>
-                <td>Mar 3, 2023</td>
+                <td>Anywhere,</td>
+                <td>Remote</td>
+                <td>$80,000</td>
+                <td>Jan 15, 2023</td>
             </tr>
             <tr class="jobs-data-row">
                 <td>Full Stack Developer</td>
-                <td>New Delhi</td>
-                <td>India</td>
-                <td>₹15,00,000</td>
-                <td>Feb 1, 2023</td>
+                <td>San Francisco</td>
+                <td>CA</td>
+                <td>$100,000</td>
+                <td>Jan 20, 2023</td>
             </tr>
             <tr class="jobs-data-row">
                 <td>Data Scientist</td>
-                <td>San Francisco</td>
-                <td>USA</td>
-                <td>$175,000</td>
-                <td>Dec 22, 2022</td>
+                <td>New York</td>
+                <td>NY</td>
+                <td>$110,000</td>
+                <td>Jan 18, 2023</td>
             </tr>
             <tr class="jobs-data-row">
                 <td>ML Engineer</td>
-                <td colspan="2">Remote</td>
-                <td>$80,000</td>
-                <td>Sep 19, 2023</td>
+                <td colspan="2">Seattle</td>
+                <td>$130,000</td>
+                <td>Jan 22, 2023</td>
             </tr>
         </table>
     </div>
 
     <div id="application">
-        <h2>Submit Your Application</h2>
+        <h2>Application Form</h2>
 
         <form id="application-form" action="https://formbold.com/s/9BryO" method="POST" enctype="multipart/form-data">
             <div class="form-group">
@@ -145,18 +128,7 @@
     </div>
 
     <div id="footer">
-        <ul id="footer-links">
-            <li>
-                <a href="https://jovian.com/learn" target="_blank">Courses</a>
-            </li>
-            <li>
-                <a href="https://jovian.com/learn" target="_blank">Programs</a>
-            </li>
-            <li>
-                <a href="https://www.youtube.com/@jovianhq" target="_blank">YouTube</a>
-            </li>
-        </ul>
-        <span class="copyright">© 2023, Jovian</span>
+        <span class="copyright">Arnold Mudegi © 2023.All Rights Reserved.</span>
     </div>
 
 
