made  a change in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 
     <div id="about">
         <div id="description">
-            <p style="margin-top: 0">Degi Institute is a leading technical institution dedicated to providing comprehensive and accessible beginner-level technical courses. Nestled in a vibrant learning environment, Degi Institute caters to individuals seeking to kickstart their journey in the ever-evolving field of technology.</p>
+            <p style="margin-top: 0">Degi Institute is a leading technical organization dedicated to providing comprehensive and accessible beginner-level technical courses. Nestled in a vibrant learning environment, Degi Institute caters to individuals seeking to kickstart their journey in the ever-evolving field of technology.</p>
         </div>
 
         <div id="black">
