--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Submit your application now at Degi job openings">
     <meta property="og:image" content="degi_logo.png">
 
-    <title>Degi Devops</title>
+    <title>Degi site</title>
     <link rel="icon" href="maybach.png" type="maybach">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
