--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
             </tr>
             <tr class="jobs-data-row">
                 <td>Frontend Developer</td>
-                <td>Anywhere,</td>
+                <td>Anywhere</td>
                 <td>Remote</td>
                 <td>$80,000</td>
                 <td>Jan 17, 2023</td>
